Feature: Implementação do Layout das Categorias de Maquiagens

--- a/Makeup/src/main/res/menu/navigation_menu.xml
+++ b/Makeup/src/main/res/menu/navigation_menu.xml
@@ -19,7 +19,9 @@
             <item
                 android:id="@+id/option_searchMakeup"
                 android:title="@string/option_searchMakeup" />
-
+            <item
+                android:id="@+id/option_categoriesMakeup"
+                android:title="@string/option_categoriesMakeup" />
             <item
                 android:id="@+id/option_moreFavorites"
                 android:title="@string/option_popularMakeup" />
