--- a/Makeup/src/main/res/layout/activity_main.xml
+++ b/Makeup/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:openDrawer="start">
 
     <LinearLayout
+        android:id="@+id/linearLayout_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
